@@ -44,6 +44,7 @@ scripts/test_nowsp_rsa_sha1.pl
 t/FAKE_DNS.dat
 t/Mail-DKIM.t
 t/adsp.t
+t/external_signer.t
 t/policy.t
 t/public_key.t
 t/signature.t
